--- a/loan/build.gradle
+++ b/loan/build.gradle
@@ -6,7 +6,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
     }
 
@@ -18,10 +17,11 @@ allprojects {
 
     dependencies {
         testImplementation  'org.assertj:assertj-core:3.12.2'
-        testImplementation  'org.junit.jupiter:junit-jupiter-api:5.3.2'
-        testImplementation  'org.junit.vintage:junit-vintage-engine:5.3.2'
+        testImplementation  'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testImplementation  'org.junit.vintage:junit-vintage-engine:5.7.2'
+        testImplementation  'org.junit.jupiter:junit-jupiter-params:5.7.2'
 
-        testRuntimeOnly     'org.junit.jupiter:junit-jupiter-engine:5.3.2'
+        testRuntimeOnly     'org.junit.jupiter:junit-jupiter-engine:5.7.2'
     }
 
     test {
