--- a/loan/loan-server/build.gradle
+++ b/loan/loan-server/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'io.spring.dependency-management'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.flywaydb:flyway-core:5.2.2'
     implementation 'org.postgresql:postgresql:42.2.8'
 
