--- a/loan/loan-acceptance-test/docker-compose.yml
+++ b/loan/loan-acceptance-test/docker-compose.yml
@@ -1,4 +1,7 @@
 version: '3.7'
+volumes:
+  mock-server-config:
+
 services:
   db:
     build:
@@ -15,3 +18,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/loans
     depends_on:
     - "db"
+  mock-server:
+    image: rodolpheche/wiremock:2.25.1
+    ports:
+      -  "8081:8080"
+    volumes:
+      - ../loan-acceptance-test/src/test/resources/wiremock-config:/home/wiremock
