[Task 4] Replace hardcoded URL in `InterestRateProviderApi` to use configuration URL from `application.yml`

--- a/loan/loan-server/src/main/resources/application.yml
+++ b/loan/loan-server/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
 logging:
   level:
     org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
+
+external:
+  interest-rate-url: https://random-data-api.com/api/number/random_number
